# vision_lane_detect

./: CMakeLists.txt  README.md  README.txt  package.xml  setup.py
launch/: lane_detect.launch
msg/: Float32MultiArray_H.msg  Int32MultiArray_H.msg
nodes/HD_lane_detect/: HD_lane_detect.cpp
nodes/HD_lane_detect_opt/: HD_lane_detect_opt.cpp  drawing.ipynb  imu.csv  lane.csv  ndt_position.csv  whiteline.csv  xsens_position.csv
nodes/HD_lane_detect_opt/.ipynb_checkpoints/: drawing-checkpoint.ipynb
nodes/lane_line_discrepancy/: lane_line_discrepancy.cpp
nodes/vision_lane_detect/: kalman_filter.h  line_utils.h  particle_filter.h  vision_lane_detect.cpp  vision_lane_detect_origin
script/ERFNet-CULane-PyTorch/: commandLine.txt  erf_net.py  test_erfnet.py  test_erfnet.sh  test_video_erfnet.py  test_video_erfnet.sh
script/ERFNet-CULane-PyTorch/dataset/: voc_aug.py
script/ERFNet-CULane-PyTorch/models/: erfnet.py
script/ERFNet-CULane-PyTorch/options/: options.py
script/ERFNet-CULane-PyTorch/predicts/vgg_SCNN_DULR_w9/driver_100_30frame/05251517_0433.MP4/: 00780.exist.txt
script/ERFNet-CULane-PyTorch/trained/: en_lstm_de_model_bs64.h5
script/ERFNet-CULane-PyTorch/utils/: cluster.py  tracker.py  transforms.py
script/HDmap_sort/: README.txt  lane_df.csv  line_sort.py  line_sort_test.py  whiteline_df.csv
script/LaneNet/: Untitled Document  cosine_similarity.py  discrepancy.py  lane_net.py  point_cloud_intensity.py  test
script/LaneNet/lanenet_model/: lanenet_cluster.py
script/LaneNet/position_data/: Readme.txt  car_position.xls  sl_central.xls  sl_edge.xls
script/homography/: projective_mapping.py
script/self_localization/: KF_lane_self_localization.py  KF_lane_self_localization_opt.py  KF_lane_self_localization_opt_run.py  plot_error.py  plot_trajectory.py
script/self_localization/save_data/: covariance.csv  kf_position.csv  lateral_distance.csv  projected_heading.csv  selected_left_lines.csv  selected_right_lines.csv  xsens_position.csv
script/self_localization/utils/: homography.py  lateral_distance.py
