<?xml version="1.0"?>
<package>
    <name>vision_lane_detect</name>
    <version>1.10.0</version>
    <description>The vision_lane_detect package</description>
    <maintainer email="syoshida@axe.bz">Syoeh YOSHIDA</maintainer>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>message_generation</build_depend>

		<!-- YC -->
		<build_depend>vector_map_msgs</build_depend>
		<build_depend>dbw_mkz_msgs</build_depend>
		<!-- YC -->

    <run_depend>message_runtime</run_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>sensor_msgs</run_depend>
		<!-- YC -->
		<run_depend>vector_map_msgs</run_depend>
		<run_depend>dbw_mkz_msgs</run_depend>
		<!-- YC -->
    
    <export>
    </export>
</package>
